@@ -14,27 +14,23 @@
 }
 
 table.calendar td.project, table.calendar td.project * {
-	background-color: #aa3333;
+	background-color: #E46554;
 	color: #fff;
-	font-weight: bold;
 }
 
 table.calendar td.workorder, table.calendar td.workorder * {
-	background-color: #3a3a3a;
+	background-color: #6A6D6D;
 	color: #fff;
-	font-weight: bold;
 }
 
 table.calendar td.task, table.calendar td.task * {
-	background-color: #33aa33;
-	color: #fff;
-	font-weight: bold;
+	background-color: #80D580;
+	color: #505050;
 }
 
 table.calendar td.agenda, table.calendar td.agenda *  {
-	background-color: #3333aa;
-	color: #fff;
-	font-weight: bold;
+	background-color: #8EC8DF;
+	color: #505050;
 }
 
 table.calendar {
