@@ -2314,19 +2314,19 @@ td.legend_color_box {
 }
 
 td.legend_project {
-	background-color: #aa3333;
+	background-color: #E46554;
 }
 
 td.legend_task {
-	background-color: #33aa33;
+	background-color: #80D580;
 }
 
 td.legend_wo {
-	background-color: #3a3a3a;
+	background-color: #6A6D6D;
 }
 
 td.legend_event {
-	background-color: #3333aa;
+	background-color: #8EC8DF;
 }
 
 td.legend_last_box{
